--- a/public/index.html
+++ b/public/index.html
@@ -44,5 +44,6 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
   </body>
 </html>
